force-app/main/default/objects/Account/fields/Active_Members_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Members_Count__c</fullName>
    <label>Active Members Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>