force-app/main/default/objects/Account/fields/Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Brand_Color__c</fullName>
    <label>Brand Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>