force-app/main/default/objects/Account/fields/Gym_Type__c.field-meta.xml
<CustomField>
    <fullName>Gym_Type__c</fullName>
    <label>Gym Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Independent Coach</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>