force-app/main/default/objects/Account/fields/Primary_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Timezone__c</fullName>
    <label>Primary Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>